tests/models/struct/named/vec/fail/lt.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/struct/named/vec/fail/lt.rs:5:5
  |
5 |     value: Vec<()>,
  |     ^^^^^
